--- a/Quinto dia/style.css
+++ b/Quinto dia/style.css
@@ -53,11 +53,26 @@ header nav .menu li a:hover {
     color: #e50914;
 }
 
-/* Hero Section */
+/* Icono del menú hamburguesa */
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.menu-toggle .bar {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+}
+
+/* Sección Hero */
 .hero {
     position: relative;
     background-image: url('./img/83b27869-9ea2-4e62-a43d-378867dd325a_16-9-aspect-ratio_default_0.png');
     background-size: cover;
+    background-position: center;
     height: 117vh;
     display: flex;
     justify-content: center;
@@ -67,7 +82,7 @@ header nav .menu li a:hover {
     padding: 0 20px;
     margin-top: 120px;
 }
-.hero img{
+.hero img {
     width: 90vh;
 }
 
@@ -351,10 +366,39 @@ header nav .menu li a:hover {
     margin: 0 auto;
 }
 
-/* Pie de página */
+/* Footer */
 footer {
     background-color: #141414;
     text-align: center;
     padding: 20px;
     color: #fff;
+}
+
+/* Responsive */
+@media screen and (max-width: 768px) {
+    header nav .menu {
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+
+    header nav .menu li a {
+        font-size: 20px;
+    }
+
+    header nav .menu li {
+        margin: 10px 0;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+}
+
+@media screen and(max-width: 480px) {
+    .hero img {
+        width: 80vh;
+    }
 }
