--- a/undecimo/style.css
+++ b/undecimo/style.css
@@ -92,3 +92,39 @@
     font-size: 0.9em;
     color: #ccc;
   }
+
+  /* Mas cards */ 
+  .personajes-destacados {
+    padding: 2em;
+    background-color: #0d1a26;
+    text-align: center;
+  }
+  
+  .card-container {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8em;
+  }
+  
+  .card {
+    background-color: #111;
+    border-radius: 10px;
+    padding: 1em;
+    width: 200px;
+    height: 200px;
+    color: #fff;
+    transition: transform 0.3s;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 70%;
+    border-radius: 8px;
+  }
+  
+  .card:hover {
+    transform: scale(1.05);
+  }
+  
